--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
 - stack --no-terminal build -j2 --pedantic
 
 # start elastic
-- docker run -p 9200:9200 -e "http.host=0.0.0.0" -e "transport.host=127.0.0.1" docker.elastic.co/elasticsearch/elasticsearch:5.5.1
+- docker run -p 9200:9200 -e "http.host=0.0.0.0" -e "transport.host=127.0.0.1" docker.elastic.co/elasticsearch/elasticsearch:5.5.1 &
 
 # run
 - stack --no-terminal exec relevant
