--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ install:
 
 before_script:
 # start elastic
-- docker run -p 9200:9200 docker.elastic.co/elasticsearch/elasticsearch:5.5.1 &
+# - docker run -p 9200:9200 -e "http.host=0.0.0.0" -e "transport.host=127.0.0.1" docker.elastic.co/elasticsearch/elasticsearch:5.5.1 &
 
 script:
 - stack --no-terminal build -j2 --pedantic
-- stack --no-terminal exec relevant
+# - stack --no-terminal exec relevant
